# hello-world-fastapi

./: Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
src/: config.py  frontend.py  main.py
