[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kaiming Guo <me@kaiming.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
fastapi = "^0.115.6"
python-multipart = "^0.0.19"
pydantic = {extras = ["email"], version = "^2.10.3"}
nicegui = "^2.8.1"
Jinja2 = "^3.1.4"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["pyproject"], version = "^24.10.0"}
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
